<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/title"
        android:textSize="@dimen/font_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blue_piece_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/nham_nham_blue_piece"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/orange_piece_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_txt" />

    <ImageView
        android:id="@+id/orange_piece_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:src="@drawable/nham_nham_orange_piece"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/blue_piece_img"
        app:layout_constraintTop_toBottomOf="@id/title_txt" />


    <TextView
        android:id="@+id/blue_player_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_player"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_piece_img" />

    <EditText
        android:id="@+id/blue_player_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/blue_player_name"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_player_label" />

    <TextView
        android:id="@+id/orange_player_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange_player"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blue_player_input" />

    <EditText
        android:id="@+id/orange_player_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/orange_player_name"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orange_player_label" />

    <TextView
        android:id="@+id/orange_starts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oranges_start"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toStartOf="@id/orange_starts_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orange_player_input" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/orange_starts_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/orange_starts_label"
        app:layout_constraintTop_toBottomOf="@id/orange_player_input" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/start_game"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rules_btn"
        app:layout_constraintTop_toBottomOf="@id/orange_starts_label" />

    <Button
        android:id="@+id/rules_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_game_rules"
        android:textSize="@dimen/font_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
