<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/font_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_small" />

        <TextView
            android:id="@+id/game_info_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_turn"
            android:textSize="@dimen/font_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_txt"
            android:layout_marginTop="@dimen/margin_small" />

        <ImageView
            android:id="@+id/top_pieces_house_img"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@mipmap/pieces_house"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@+id/game_info_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/board_img"
            android:contentDescription="@string/board_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/game_grid_background"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/top_pieces_house_img"
            app:layout_constraintBottom_toTopOf="@id/bottom_pieces_house_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/bottom_pieces_house_img"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@mipmap/pieces_house"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@+id/board_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_game"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_small" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>